// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-info-task for Ember Addons can read project info and output to console 1`] = `
"=== Ember Project

type: Ember.js addon

"
`;

exports[`project-info-task for Ember Addons can read project info as JSON 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Ember Project",
    "taskClassification": Object {
      "category": "recommendations",
      "priority": "medium",
    },
    "taskName": "ember-project",
  },
  "result": Object {
    "type": "Ember.js addon",
  },
}
`;

exports[`project-info-task for Ember Addons can read project info for html 1`] = `
Array [
  TableData {
    "componentType": "table",
    "formattedResult": Array [
      Object {
        "result": Object {
          "name": "type",
          "value": "Ember.js addon",
        },
        "rowClass": "bg-gray-100",
      },
    ],
    "meta": Object {
      "friendlyTaskName": "Ember Project",
      "taskClassification": Object {
        "category": "recommendations",
        "priority": "medium",
      },
      "taskName": "ember-project",
    },
    "tableHeaders": Array [
      "name",
      "value",
    ],
  },
]
`;

exports[`project-info-task for Ember Applications can read project info and output to console 1`] = `
"=== Ember Project

type: Ember.js application

"
`;

exports[`project-info-task for Ember Applications can read project info as JSON 1`] = `
Object {
  "meta": Object {
    "friendlyTaskName": "Ember Project",
    "taskClassification": Object {
      "category": "recommendations",
      "priority": "medium",
    },
    "taskName": "ember-project",
  },
  "result": Object {
    "type": "Ember.js application",
  },
}
`;

exports[`project-info-task for Ember Applications can read project info for html 1`] = `
Array [
  TableData {
    "componentType": "table",
    "formattedResult": Array [
      Object {
        "result": Object {
          "name": "type",
          "value": "Ember.js application",
        },
        "rowClass": "bg-gray-100",
      },
    ],
    "meta": Object {
      "friendlyTaskName": "Ember Project",
      "taskClassification": Object {
        "category": "recommendations",
        "priority": "medium",
      },
      "taskName": "ember-project",
    },
    "tableHeaders": Array [
      "name",
      "value",
    ],
  },
]
`;
